# blockchain-llm-agent

./: .env 2  .env.sample  .gitignore  .gitmodules  README.md  pyproject.toml
app/: main.py
app/agent/: base_agent.py  math_agent.py  mcp_assistant_agent.py  mcp_executor_agent.py  txt2txn_agent.py
app/mcp/: math_mcp_server.py
app/mcp/goat-model-context-protocol/: pnpm-lock.yaml
app/schemas/: swap.json  transfer.json
app/services/: base_ai_service.py  blockchain_service.py  ollama_service.py
app/services/handlers/: base_handler.py  deepseek_r1_handler.py  default_handler.py  handler_factory.py
app/tools/: blockchain_query_tool.py  blockchain_txn_tool.py  encode_msg_data_tool.py  token_transfer_tool.py
app/utils/: contracts.py  messages.py
src/agent/: base_ag2_agent.py  base_agent.py  blockchain_agent.py  intent_agent.py  orchestrator.py  planner_agent.py  user_agent.py
src/contracts/: token_contracts.json
src/utils/: config.py  messages.py  prompt.py  pydantic_types.py
tests/: test_intent_agent.py  test_orchestrator.py  test_planner_agent.py
tests/scripts/: test_ag2_mcp.py  test_blockchain_data_tool.py  test_evm_mcp.py  test_goat_mcp.py  test_math_agent.py  test_mcp.py  test_ui_ag2.py
